Fixed cursor behind background

--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -15,6 +15,8 @@
 }
 
 .home-body {
+  z-index: -2;
+  position: relative;
   height: 100vh;
   width: 100vw;
   background-color: black;
@@ -25,6 +27,7 @@
   justify-content: center;
 
   .background-video {
+    z-index: -1;
     position: fixed;
     right: 0;
     bottom: 0;
